@@ -19,14 +19,8 @@ def copy(text: str) -> None:
 
 
 def is_compatible() -> bool:
-    if sys.platform != "darwin":
-        logger.debug("%s is incompatible with non-macOS systems", __name__)
-        return False
-
-    logger.debug("%s is compatible", __name__)
-    return True
+    return sys.platform == "darwin"
 
 
 def is_installed() -> bool:
-    logger.debug("%s requires no dependencies", __name__)
     return True
